# what4-serialize

./: .gitmodules  .travis.yml  README.md  cabal.project.newbuild  what4-serialize.cabal
src/What4/Serialize/: FastSExpr.hs  Normalize.hs  Parser.hs  Printer.hs  SETokens.hs
src/What4/Utils/: Log.hs  Util.hs
tests/: SymFnTests.hs  TestUtils.hs
