Name:          what4-serialize
Version:       0.0.1
Author:        Galois Inc.
Maintainer:    dmatichuk@galois.com
Copyright:     (c) Galois, Inc 2019
License:       BSD3
License-file:  LICENSE
Build-type:    Simple
Cabal-version: >= 1.10
Category:      Language
Synopsis:      Package for serialization of What4 terms
Description:
            Provides primitives for transforming what4 terms into s-expressions and back again.

library
  build-depends:
    base >= 4.8 && < 5,
    bv-sized >= 1.0.0 && < 1.1,
    BoundedChan >= 1 && < 2,
    containers >= 0.5.0.0,
    directory >= 1.2 && < 1.4,
    mtl >= 2.2 && < 2.3,
    ordered-containers >= 0.2 && < 0.3,
    megaparsec >= 7 && < 10,
    unordered-containers >= 0.2 && < 0.3,
    parsec >= 3.1 && < 3.2,
    parameterized-utils >= 2.1.0 && < 2.2,
    s-cargot >= 0.1.4.0 && < 0.2,
    s-cargot-letbind >= 0.2.2.0 && < 0.3,
    stm,
    text,
    transformers,
    time,
    unliftio >= 0.2 && < 0.3,
    libBF >= 0.6.2 && < 0.7,
    what4 >= 1.1 && < 1.2,
    ghc-prim

  default-language: Haskell2010

  hs-source-dirs: src

  exposed-modules:
    What4.Serialize.SETokens
    What4.Serialize.Printer
    What4.Serialize.Parser
    What4.Serialize.FastSExpr
    What4.Serialize.Normalize
    What4.Utils.Log
    What4.Utils.Util

  ghc-options: -Wall
  if impl(ghc >= 8.6)
    default-extensions: NoStarIsType

test-suite what4-serialize-tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall -rtsopts -threaded
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: SymFnTests, TestUtils
  build-depends:   what4
                 , what4-serialize
                 , base
                 , containers
                 , directory
                 , exceptions
                 , hedgehog
                 , libBF
                 , tasty
                 , tasty-hunit
                 , tasty-hedgehog
                 , text
                 , parameterized-utils
                 , async
                 , directory
                 , ordered-containers
